Increment 6: the codec for primitives (#14)
Increment 6 is the codec for primitives, as docs/next.md in this pull request spells it out, and the seed here covers it end to end.

- Codec<T> in the api: encodedLength, encode, decode, lastDecodedLength, decodedLength, over Agrona's buffers.
- Template in the generator: a text block with {name} placeholders; a name left unfilled, a value never used or a name given twice fails; a value that spans lines is indented to its placeholder's column.
- The codec emitter, its own file: one text block for the codec class and one line each for encoding and decoding a field, filled through Template. It walks the IR the way JavaGenerator does and names flyweight members through JavaUtil. Anything it does not cover yet, a header type of its own, big-endian, a group, var-data, an enum, a set, a composite, an array, a constant, an optional field, a field added in a later version, is a problem naming the message: no codec for <construct> yet; set codecs = false on @SbeSchema.
- Generator.generate(Schema, Annotated, output) runs the emitter after the flyweights under the schema package unless @SbeSchema(codecs = false); Generator.ir(Schema) gives tests the IR without javac.
- The face rule in Mapping: a component's type must be the flyweight's face of its wire primitive, "long is not the face of uint16, which is int", checked where the wire type is known to be one primitive.
- The corpus's fifth view, codecs, the expected source of each codec by qualified name. Primitives and Messages carry theirs, hand-written; every other case carries codecs = false and an empty map, and CorpusTest asserts the emitter names the construct it lacks, which is the work list for increments 7 to 15.
- The example: com.example.quotes, a primitives-only schema whose test round trips a Quote through the generated QuoteCodec at a non-zero offset, with every length of the contract agreeing, and rejects another template id; com.example.trading sets codecs = false w